cros: Focus the primary password field when OOBE dialog goes away.

As part of this CL, a method has been added to LoginScreenControllerObserver to be notified when the OOBE dialog visibility changes.

Bug: 871186
Change-Id: I7b8d9fb7de99c16df6166c43f2eb55f56b93736e
Reviewed-on: https://chromium-review.googlesource.com/1164248
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581318}
Former-commit-id: c6ff3153fecc53f330f85c3a2d2fe6bf22cd6509