ash/login/login_screen_controller_observer.cc
@@ -2,10 +2,22 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#include "ash/login/login_screen_controller_observer.h"
+
 #include "ash/login/login_screen_controller.h"
 
 namespace ash {
 
 LoginScreenControllerObserver::~LoginScreenControllerObserver() = default;
+
+void LoginScreenControllerObserver::SetAvatarForUser(
+    const AccountId& account_id,
+    const mojom::UserAvatarPtr& avatar) {}
+
+void LoginScreenControllerObserver::OnFocusLeavingLockScreenApps(bool reverse) {
+}
+
+void LoginScreenControllerObserver::OnOobeDialogVisibilityChanged(
+    bool visible) {}
 
 }  // namespace ash
