ash/login/login_screen_controller_observer.h
@@ -20,11 +20,14 @@ class ASH_EXPORT LoginScreenControllerObserver {
 
   // Called when |avatar| for |account_id| has changed.
   virtual void SetAvatarForUser(const AccountId& account_id,
-                                const mojom::UserAvatarPtr& avatar) = 0;
+                                const mojom::UserAvatarPtr& avatar);
 
   // Called when focus is leaving a lock screen app window due to tabbing.
   // |reverse| - whether the tab order is reversed.
-  virtual void OnFocusLeavingLockScreenApps(bool reverse) = 0;
+  virtual void OnFocusLeavingLockScreenApps(bool reverse);
+
+  // Called when the visibility state of the OOBE dialog is changed.
+  virtual void OnOobeDialogVisibilityChanged(bool visible);
 };
 
 }  // namespace ash
