ash/shelf/login_shelf_view.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ash/ash_export.h"
 #include "ash/lock_screen_action/lock_screen_action_background_observer.h"
+#include "ash/login/login_screen_controller_observer.h"
 #include "ash/public/interfaces/kiosk_app_info.mojom.h"
 #include "ash/shutdown_controller.h"
 #include "ash/tray_action/tray_action_observer.h"
@@ -30,6 +31,7 @@ namespace ash {
 class LockScreenActionBackgroundController;
 enum class LockScreenActionBackgroundState;
 class TrayAction;
+class LoginScreenController;
 
 class KioskAppsButton;
 
@@ -39,7 +41,8 @@ class ASH_EXPORT LoginShelfView : public views::View,
                                   public views::ButtonListener,
                                   public TrayActionObserver,
                                   public LockScreenActionBackgroundObserver,
-                                  public ShutdownController::Observer {
+                                  public ShutdownController::Observer,
+                                  public LoginScreenControllerObserver {
  public:
   enum ButtonId {
     kShutdown = 1,    // Shut down the device.
@@ -94,6 +97,9 @@ class ASH_EXPORT LoginShelfView : public views::View,
   // ShutdownController::Observer:
   void OnShutdownPolicyChanged(bool reboot_on_shutdown) override;
 
+  // LoginScreenControllerObserver:
+  void OnOobeDialogVisibilityChanged(bool visible) override;
+
  private:
   bool LockScreenActionBackgroundAnimating() const;
 
@@ -114,6 +120,9 @@ class ASH_EXPORT LoginShelfView : public views::View,
 
   ScopedObserver<ShutdownController, ShutdownController::Observer>
       shutdown_controller_observer_;
+
+  ScopedObserver<LoginScreenController, LoginScreenControllerObserver>
+      login_screen_controller_observer_;
 
   KioskAppsButton* kiosk_apps_button_ = nullptr;  // Owned by view hierarchy
 
